[tool.poetry]
name = "merge-stardist-masks"
version = "0.1.5"
description = "Merge Stardist Masks"
authors = ["Niklas Breitenbach-Netter <niknett@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/gatoniel/merge-stardist-masks"
repository = "https://github.com/gatoniel/merge-stardist-masks"
documentation = "https://merge-stardist-masks.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/gatoniel/merge-stardist-masks/releases"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
stardist = ">=0.7.3,<0.10.0"
numpy = ">=1.21.0"
edt = "^2.3.0"
requests = ">=2.31.0"
packaging = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^7.2"}
safety = "^2.3.3"
mypy = "^1.0.1"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
sphinx = "^5.0.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = ">=21.10b0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.2.13"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.9.0"
pre-commit-hooks = "^4.3.0"
Pygments = "^2.13.0"
pyupgrade = "^3.3.0"
furo = ">=2021.11.12"
pytest-mock = "^3.10.0"
tensorflow = "^2.14.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["merge_stardist_masks", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
plugins = "numpy.typing.mypy_plugin"
exclude = "src/merge_stardist_masks/model_2d.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
