[tool.poetry]
name = "merge-stardist-masks"
version = "0.2.4"
description = "Merge Stardist Masks"
authors = ["Niklas Breitenbach-Netter <niknett@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/gatoniel/merge-stardist-masks"
repository = "https://github.com/gatoniel/merge-stardist-masks"
documentation = "https://merge-stardist-masks.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/gatoniel/merge-stardist-masks/releases"

[tool.poetry.dependencies]
python = ">=3.9.2,<3.13"
stardist = ">=0.7.3,<0.10.0"
numpy = ">=1.21.0,<2.0"
edt = ">=2.3,<4.0"
requests = ">=2.31.0"
packaging = ">=24.1,<26.0"
# Safety issue Vuln ID 76170
cryptography = ">=44.0.1"
loky = "^3.5.5"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2,<9.0"
coverage = {extras = ["toml"], version = "^7.2"}
safety = ">=2.3.3,<4.0.0"
mypy = "^1.0.1"
typeguard = ">=2.13.2,<5.0.0"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
sphinx = ">=5,<8"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.20,<5.0"
flake8 = ">=5.0.4,<8.0.0"
black = ">=21.10b0"
flake8-bandit = "^4.1.1"
flake8-bugbear = ">=23.2.13,<25.0.0"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = ">=0.13.2,<0.16.0"
darglint = "^1.8.1"
reorder-python-imports = "^3.9.0"
pre-commit-hooks = ">=4.3,<6.0"
Pygments = "^2.13.0"
pyupgrade = "^3.3.0"
furo = ">=2021.11.12"
pytest-mock = "^3.10.0"
tensorflow = "^2.14.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["merge_stardist_masks", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
plugins = "numpy.typing.mypy_plugin"
exclude = "src/merge_stardist_masks/model_2d.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
